# groth16-solana

./: Cargo.toml  parse_vk_to_rust.js
src/: decompression.rs  groth16.rs  lib.rs
