[package]
name = "groth16-solana"
version = "0.0.4"
edition = "2021"
description = "groth16 verification with solana alt_bn128 syscalls"
repository = "https://github.com/sunmoon11100/groth16-solana"
license = "MIT"

[dependencies]
solana-bn254 = "2.2.1"
thiserror = "2.0.12"
ark-serialize = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-bn254 = "0.5.0"
num-bigint = "0.4.6"


[dev-dependencies]
ark-std = "0.5.0"
array-bytes = "9.1.2"
serde = "1.0.195"
serde_json = "1.0.111"
